; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ir-kbd-i2c.c_ir_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ir-kbd-i2c.c_ir_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.IR_i2c = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @ir_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ir_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.IR_i2c*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.IR_i2c* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.IR_i2c* %5, %struct.IR_i2c** %3, align 8
  %6 = load %struct.IR_i2c*, %struct.IR_i2c** %3, align 8
  %7 = getelementptr inbounds %struct.IR_i2c, %struct.IR_i2c* %6, i32 0, i32 1
  %8 = call i32 @cancel_delayed_work_sync(i32* %7)
  %9 = load %struct.IR_i2c*, %struct.IR_i2c** %3, align 8
  %10 = getelementptr inbounds %struct.IR_i2c, %struct.IR_i2c* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @rc_unregister_device(i32 %11)
  %13 = load %struct.IR_i2c*, %struct.IR_i2c** %3, align 8
  %14 = call i32 @kfree(%struct.IR_i2c* %13)
  ret i32 0
}

declare dso_local %struct.IR_i2c* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @rc_unregister_device(i32) #1

declare dso_local i32 @kfree(%struct.IR_i2c*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
